<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="display">Display</string>
    <string name="enter">Enter something</string>
    <string name="textView">display what user enters</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>